# crates-nvim-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  temp
crates-nvim/: Cargo.toml
crates-nvim/src/: check.rs  error.rs  lib.rs
crates/ide/: Cargo.toml
crates/ide/src/: cargo.rs  check.rs  error.rs  index.rs  lib.rs
crates/ide/src/index/: error.rs  fetch.rs  test.rs
crates/nvim/: Cargo.toml
crates/nvim/src/: lib.rs
crates/toml/: Cargo.toml
crates/toml/src/: container.rs  datetime.rs  diagnostic.rs  error.rs  lex.rs  lib.rs  map.rs  onevec.rs  parse.rs  test.rs  util.rs
crates/toml/src/lex/: test.rs
crates/toml/src/map/: test.rs
crates/toml/src/parse/: lit.rs  num.rs  test.rs
crates/toml/src/test/: fuzz.rs
crates/toml/tests/: invalid.rs  suite.rs  valid.rs
crates/toml/tests/fixtures/invalid/array/: double-comma-1.stderr  double-comma-2.stderr  extend-defined-aot.stderr  extending-table.stderr  missing-separator-1.stderr  missing-separator-2.stderr  no-close-1.stderr  no-close-2.stderr  no-close-3.stderr  no-close-4.stderr  no-close-5.stderr  no-close-6.stderr  no-close-7.stderr  no-close-8.stderr  no-close-table-1.stderr  no-close-table-2.stderr  no-comma-1.stderr  no-comma-2.stderr  no-comma-3.stderr  only-comma-1.stderr  only-comma-2.stderr  tables-1.stderr  tables-2.stderr  text-after-array-entries.stderr  text-before-array-separator.stderr
crates/toml/tests/fixtures/invalid/bool/: almost-false-with-extra.stderr  almost-false.stderr  almost-true-with-extra.stderr  almost-true.stderr  bool.stderr  capitalized-false.stderr  capitalized-true.stderr  just-f.stderr  just-t.stderr  mixed-case-false.stderr  mixed-case-true.stderr  mixed-case.stderr  starting-same-false.stderr  starting-same-true.stderr  wrong-case-false.stderr  wrong-case-true.stderr
crates/toml/tests/fixtures/invalid/control/: bare-cr.stderr  bare-formfeed.stderr  bare-null.stderr  bare-vertical-tab.stderr  comment-cr.stderr  comment-del.stderr  comment-ff.stderr  comment-lf.stderr  comment-null.stderr  comment-us.stderr  control.stderr  multi-cr.stderr  multi-del.stderr  multi-lf.stderr  multi-null.stderr  multi-us.stderr  rawmulti-cd.stderr  rawmulti-del.stderr  rawmulti-lf.stderr  rawmulti-null.stderr  rawmulti-us.stderr  rawstring-cr.stderr  rawstring-del.stderr  rawstring-lf.stderr  rawstring-null.stderr  rawstring-us.stderr  string-bs.stderr  string-cr.stderr  string-del.stderr  string-lf.stderr  string-null.stderr  string-us.stderr
crates/toml/tests/fixtures/invalid/datetime/: feb-29.stderr  feb-30.stderr  hour-over.stderr  mday-over.stderr  mday-under.stderr  minute-over.stderr  month-over.stderr  month-under.stderr  no-leads-month.stderr  no-leads-with-milli.stderr  no-leads.stderr  no-secs.stderr  no-t.stderr  second-over.stderr  time-no-leads.stderr  y10k.stderr
crates/toml/tests/fixtures/invalid/encoding/: utf16-comment.stderr  utf16-key.stderr
crates/toml/tests/fixtures/invalid/float/: double-point-1.stderr  double-point-2.stderr  exp-double-e-1.stderr  exp-double-e-2.stderr  exp-double-us.stderr  exp-leading-us.stderr  exp-point-1.stderr  exp-point-2.stderr  exp-point-3.stderr  exp-trailing-us-1.stderr  exp-trailing-us-2.stderr  exp-trailing-us.stderr  float.stderr  inf-capital.stderr  inf-incomplete-1.stderr  inf-incomplete-2.stderr  inf-incomplete-3.stderr  inf_underscore.stderr  leading-point-neg.stderr  leading-point-plus.stderr  leading-point.stderr  leading-us.stderr  leading-zero-neg.stderr  leading-zero-plus.stderr  leading-zero.stderr  nan-capital.stderr  nan-incomplete-1.stderr  nan-incomplete-2.stderr  nan-incomplete-3.stderr  nan_underscore.stderr  trailing-point-min.stderr  trailing-point-plus.stderr  trailing-point.stderr  trailing-us-exp-1.stderr  trailing-us-exp-2.stderr  trailing-us.stderr  us-after-point.stderr  us-before-point.stderr
crates/toml/tests/fixtures/invalid/inline-table/: bad-key-syntax.stderr  double-comma.stderr  duplicate-key-1.stderr  duplicate-key-2.stderr  duplicate-key-3.stderr  duplicate-key-4.stderr  empty-1.stderr  no-close-1.stderr  no-close-2.stderr  no-comma-1.stderr  no-comma-2.stderr  overwrite-01.stderr  overwrite-02.stderr  overwrite-03.stderr  overwrite-04.stderr  overwrite-05.stderr  overwrite-06.stderr  overwrite-07.stderr  overwrite-08.stderr  overwrite-09.stderr  overwrite-10.stderr  trailing-comma.stderr
crates/toml/tests/fixtures/invalid/integer/: capital-bin.stderr  capital-hex.stderr  capital-oct.stderr  double-sign-nex.stderr  double-sign-plus.stderr  double-us.stderr  incomplete-bin.stderr  incomplete-hex.stderr  incomplete-oct.stderr  integer.stderr  invalid-bin.stderr  invalid-hex-1.stderr  invalid-hex-2.stderr  invalid-hex.stderr  invalid-oct.stderr  leading-us-bin.stderr  leading-us-hex.stderr  leading-us-oct.stderr  leading-us.stderr  leading-zero-1.stderr  leading-zero-2.stderr  leading-zero-3.stderr  leading-zero-sign-1.stderr  leading-zero-sign-2.stderr  leading-zero-sign-3.stderr  negative-bin.stderr  (+13 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_semver.rs  fuzz_target_1.rs  fuzz_toml.rs
(+436 files in other folders)
