[workspace]
resolver = "2"
members = [
    "crates-nvim",
    "crates-toml",
    "crates-cli",
    "crates-semver",
    "crates-common",
    "fuzz",
]

[workspace.dependencies]
toml = { package = "crates-toml", path = "crates-toml" }
semver = { package = "crates-semver", path = "crates-semver" }
common = { package = "crates-common", path = "crates-common" }
bumpalo = { version = "3.15.4", features = ["collections"] }
memchr = "2.7.2"

[profile.release]
strip = true
