[package]
name = "crates-nvim"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
toml = { workspace = true }
bumpalo = { workspace = true }
nvim-oxi = { version = "0.4.1", features = ["neovim-0-9"] }
serde = { version = "1.0", features = ["serde_derive"] }
serde_derive = "1.0"
serde_repr = "0.1.18"
