[package]
name = "crates-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
bumpalo = { workspace = true }
toml = { workspace = true }
semver = { workspace = true }

[[bin]]
name = "fuzz_toml"
path = "fuzz_targets/fuzz_toml.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_semver"
path = "fuzz_targets/fuzz_semver.rs"
test = false
doc = false
bench = false
