[package]
name = "crates-ide"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = { workspace = true }
semver = { workspace = true }
common = { workspace = true }
bumpalo = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
crossbeam-channel = "0.5"
http_req = "0.11.0"
serde = { workspace = true, features = ["derive"] }
serde_derive = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
