[package]
name = "crates-nvim"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ide = { workspace = true }
toml = { workspace = true }
common = { workspace = true }
bumpalo = { workspace = true }
nvim-oxi = { version = "0.5.0", features = ["neovim-0-10"] }
serde = { version = "1.0", features = ["serde_derive"] }
serde_derive = "1.0"
