[package]
name = "crates-toml"
version = "0.1.0"
edition = "2021"

[features]
default = ["indexmap"]
indexmap = ["dep:indexmap"]

[dependencies]
common = { workspace = true }
bumpalo = { workspace = true }
indexmap = { version = "2.2.6", optional = true }

[dev-dependencies]
pretty_assertions = "1.4.0"
toml-test-harness = "0.4.8"
toml-test-data = "1.8.0"
libtest-mimic = "0.7.2"

[[test]]
name = "suite"
harness = false

[[test]]
name = "invalid"
harness = false
