[package]
name = "crates-toml"
version = "0.1.0"
edition = "2021"

[features]
default = ["indexmap"]
indexmap = ["dep:indexmap"]

[dependencies]
common = { workspace = true }
bumpalo = { workspace = true }
indexmap = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
toml-test-harness = "0.4.9"
toml-test-data = "1.12.0"
libtest-mimic = "0.7.3"

[[test]]
name = "valid"
harness = false

[[test]]
name = "invalid"
harness = false
